--- a/Views/ThiSinhDangKies/Index.cshtml
+++ b/Views/ThiSinhDangKies/Index.cshtml
@@ -39,7 +39,7 @@
                 <div class="col-auto mb-1">
                     <div class="page-header-title mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        <span id="sp_tieude">Quản lý thông tin của thí</span>
+                        <span id="sp_tieude">Quản lý thông tin của thí sinh</span>
                     </div>
                 </div>
 
