--- a/Views/Auth/ForgotPassword.cshtml
+++ b/Views/Auth/ForgotPassword.cshtml
@@ -87,7 +87,7 @@
             <div class="text-center text-uppercase"><h5 class="colorlogin" style="font-weight: bold">ĐẶT LẠI MẬT KHẨU MỚI</h5></div>
             <hr />
             <p class="mt-3" style="color: blue; font-style: italic; text-align: justify; font-size:12px">
-                Nhập các thông tin vào phần phía dưới để đổi mật khẩu hoặc chuyển đến phần <a href="#" style="font-weight:bold" onclick="ShowFormSendEmail()">Lấy mã xác thực</a> nếu đã có mã xác thực gửi đến email.
+                Nhập các thông tin vào phần phía dưới để đổi mật khẩu hoặc chuyển đến phần <a href="#" style="font-weight:bold" onclick="ShowFormSendEmail()">Lấy mã xác thực</a> nếu chưa có mã xác thực.
             </p>
             <script>
                 function ShowFormSendEmail() {
