--- a/Views/LePhiXetTuyens/Index.cshtml
+++ b/Views/LePhiXetTuyens/Index.cshtml
@@ -58,8 +58,8 @@
                             <th style="width:20%">Mã, tên ngành</th>
                             <th style="width:15%">Mã, tên tổ hợp</th>
                             <th>Ngày Đăng ký</th>
-                            <th>Trạng thái</th>
-                            <th class="text-center  text-nowrap" style="width:120px">Minh chứng lệ phí</th>
+                            <th>Thông tin nộp lệ phí</th>
+                            <th class="text-center  text-nowrap" style="width:120px">Cập nhật nộp lệ phí</th>
                         </tr>
                         <tbody class="tbody-trunghoc-ptqg">
                         </tbody>
@@ -140,8 +140,8 @@
                             <th style="width:20%">Mã, tên ngành</th>
                             <th style="width:15%; ">Mã, tên tổ hợp</th>
                             <th>Ngày Đăng ký</th>
-                            <th>Trạng thái</th>
-                            <th class="text-center  text-nowrap" style="width:120px">Minh chứng lệ phí</th>
+                            <th>Thông tin nộp lệ phí</th>
+                            <th class="text-center  text-nowrap" style="width:120px">Cập nhật nộp lệ phí</th>
                         </tr>
                         <tbody class="tbody-hocba">
                         </tbody>
@@ -220,8 +220,8 @@
                             <th style="width:20%">Mã, tên ngành</th>
                             <th style="width:15%">Môn đạt giải</th>
                             <th>Ngày Đăng ký</th>
-                            <th>Trạng thái</th>
-                            <th class="text-center  text-nowrap" style="width:120px">Minh chứng lệ phí</th>
+                            <th>Thông tin nộp lệ phí</th>
+                            <th class="text-center  text-nowrap" style="width:120px">Cập nhật nộp lệ phí</th>
                         </tr>
                         <tbody class="tbody-tuyenthang">
                         </tbody>
@@ -302,8 +302,8 @@
                             <th style="width:20%">Mã, tên ngành</th>
                             <th style="width:15%">Tên KQ Nộp Xét</th>
                             <th>Ngày Đăng ký</th>
-                            <th>Trạng thái</th>
-                            <th class="text-center  text-nowrap" style="width:120px">Minh chứng lệ phí</th>
+                            <th>Thông tin nộp lệ phí</th>
+                            <th class="text-center  text-nowrap" style="width:120px">Cập nhật nộp lệ phí</th>
                         </tr>
                         <tbody class="tbody-ngoaingu">
                         </tbody>
@@ -380,8 +380,8 @@
                             <th style="width:20%">Mã, tên ngành</th>
                             <th style="width:15%">Tên KQ Nộp Xét</th>
                             <th>Ngày Đăng ký</th>
-                            <th>Trạng thái</th>
-                            <th class="text-center text-nowrap" style="width:120px">Minh chứng lệ phí</th>
+                            <th>Thông tin nộp lệ phí</th>
+                            <th class="text-center  text-nowrap" style="width:120px">Cập nhật nộp lệ phí</th>
                         </tr>
                         <tbody class="tbody-dgnl">
                         </tbody>
